--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.344.0",
+    "openai": "^4.77.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
-    "react-typed": "^2.0.12"
+    "react-typed": "^2.0.12",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -37,6 +40,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.11"
   }
 }
