--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learnHub",
-  "homepage": "http://jonjicjan.github.io/LearnHub/",
+  "homepage": "https://jonjicjan.github.io/LearnHub/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
